01-lab-setup/01-tier1-setup/resources/hubble/httproutes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
  - name: k8s-lab
    namespace: istio-gateway
    sectionName: wildcard-https-termination
 
  hostnames:
  - "hubble.k8s-lab.local"
 
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - name: hubble-ui 
      port: 80
